# fintrack

./: .gitignore  pyproject.toml  requirements.txt
fintrack/: __init__.py
tests/: test_cli.py
